--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -3,15 +3,12 @@
 // For example:
 $red: #ee5f5b;
 $blue: #469ae0;
-$yellow: #fdb631;
-$orange: #e67e22;
+$yellow: #f0c808;
+$orange: #f4a259;
 $green: #32b796;
-$gray: #000000;
-$light-gray: #f4f4f4;
+$gray: #696a68;
 
 $first: #0a1e2a;
-$second: #142b22;
 $third: #3fb1ce;
-$fourth: #26503e;
 $white: #f8f8f8;
 $black: #000000;
